initial java21+ update